--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 body{
     font-family: "Rubik", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header{
@@ -30,3 +33,22 @@ header a{
 header a.active{
     background-color: #C4C4C4;
 }
+.edit_user_form{
+    height: 100%;
+    border: 1px solid #000;
+    margin: 80px 100px;   
+}
+h1{
+    font-family: "Karla", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: center;
+    margin-top: 60px;
+    text-transform: uppercase;
+}
+.user_name{
+    width: 500px;
+    height: 48px;
+}
+
